--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -106,6 +106,7 @@
             background-color: $darkGrey;
             color: white;
             display: flex;
+            z-index: 100;
             flex-direction: column;
             align-items: center;
             justify-content: space-around;
