--- a/css/style.css
+++ b/css/style.css
@@ -405,6 +405,7 @@ button:hover,
     background-color: #3A3A3A;
     color: white;
     display: flex;
+    z-index: 100;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
@@ -596,6 +597,8 @@ button:hover,
   flex-direction: column;
   height: 75vh;
   justify-content: flex-end;
+  position: relative;
+  z-index: -1;
 }
 .hero__title h1 {
   font-weight: 300;
